# nekoland

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: completions.yml
agent/: completed_plan.md  current_plan.md  external_shell_mode_design.md  findings.md  infinite_workspace_viewport_design.md  output_background_design.md  per_output_active_workspace_design.md  workspace_output_rollout_plan.md
assets/cursors/default/: README.md
benches/: ecs_overhead_bench.rs  layout_bench.rs  render_bench.rs
completions/: _nekoland-msg  nekoland-msg.bash  nekoland-msg.fish
config/: default.toml  example.toml  full-example.toml  tiling.toml
crates/nekoland-backend/: Cargo.toml
crates/nekoland-backend/src/: components.rs  lib.rs  manager.rs  plugin.rs  traits.rs  virtual_output.rs
crates/nekoland-backend/src/common/: cursor.rs  gles_executor.rs  mod.rs  outputs.rs  presentation.rs  render_order.rs
crates/nekoland-backend/src/drm/: device.rs  gbm.rs  input.rs  mod.rs  session.rs  surface.rs
crates/nekoland-backend/src/plugin/: apply.rs  extract.rs  feedback.rs  normalize.rs  present.rs  tests.rs
crates/nekoland-backend/src/winit/: backend.rs  host.rs  mod.rs
crates/nekoland-config/: Cargo.toml
crates/nekoland-config/src/: action_config.rs  hot_reload.rs  keybind_config.rs  lib.rs  loader.rs  plugin.rs  schema.rs  theme.rs
crates/nekoland-config/src/resources/: compositor_config.rs  keyboard_layout.rs  mod.rs
crates/nekoland-core/: Cargo.toml
crates/nekoland-core/src/: app.rs  bridge.rs  calloop.rs  error.rs  lib.rs  lifecycle.rs  plugin.rs  schedules.rs
crates/nekoland-ecs/: Cargo.toml
crates/nekoland-ecs/src/: bundles.rs  control.rs  kinds.rs  lib.rs  presentation_logic.rs  selectors.rs  views.rs  workspace_membership.rs
crates/nekoland-ecs/src/components/: animation.rs  decoration.rs  layer.rs  mod.rs  output.rs  popup.rs  seat.rs  surface.rs  window.rs  workspace.rs  x11.rs
crates/nekoland-ecs/src/events/: input_events.rs  mod.rs  output_events.rs  window_events.rs
crates/nekoland-input/: Cargo.toml
crates/nekoland-input/src/: commands.rs  gestures.rs  keybindings.rs  keyboard.rs  lib.rs  plugin.rs  pointer.rs  seat_manager.rs  touch.rs
crates/nekoland-ipc/: Cargo.toml
crates/nekoland-ipc/src/: lib.rs  plugin.rs  protocol.rs  server.rs  subscribe.rs
crates/nekoland-ipc/src/commands/: action.rs  mod.rs  output.rs  popup.rs  query.rs  tiling.rs  window.rs  workspace.rs
crates/nekoland-protocol/: Cargo.toml
crates/nekoland-protocol/src/: compositor.rs  data_device.rs  dmabuf.rs  foreign_toplevel_list.rs  fractional_scale.rs  idle_notify.rs  layer_shell.rs  lib.rs  output_management.rs  plugin.rs  presentation_time.rs  primary_selection.rs  screencopy.rs  session_lock.rs  subapp.rs  viewporter.rs  xdg_activation.rs  xdg_decoration.rs  xdg_shell.rs
crates/nekoland-protocol/src/plugin/: bootstrap.rs  feedback.rs  queue.rs  seat.rs  selection.rs  server.rs  surface.rs  tests.rs  xwayland.rs
crates/nekoland-protocol/src/resources/: clipboard.rs  dnd.rs  layer_requests.rs  mod.rs  output_presentation.rs  pending_events.rs  popup_requests.rs  window_requests.rs  x11_requests.rs
crates/nekoland-render/: Cargo.toml
crates/nekoland-render/src/: animation.rs  compositor_render.rs  cursor.rs  damage_tracker.rs  final_output_plan.rs  frame_callback.rs  lib.rs  material.rs  output_overlay.rs  overlay_ui.rs  phase_plan.rs  pipeline_cache.rs  plugin.rs  prepare_resources.rs  presentation_feedback.rs  process_plan.rs  readback_plan.rs  render_graph.rs  scene_process.rs  scene_source.rs  screenshot.rs  surface_visual.rs  text.rs
crates/nekoland-render/src/effects/: blur.rs  fade.rs  mod.rs  rounded_corners.rs  shadow.rs
crates/nekoland-render/src/plugin/: extract.rs  sync_back.rs  tests.rs
crates/nekoland-shell/: Cargo.toml
crates/nekoland-shell/src/: commands.rs  decorations.rs  focus.rs  fps_hud.rs  interaction.rs  lib.rs  plugin.rs  presentation.rs  surface_presentation.rs  viewport.rs  window_control.rs  window_lifecycle.rs  window_policy.rs  window_switcher.rs  workspace.rs
crates/nekoland-shell/src/layer/: arrange.rs  mod.rs
crates/nekoland-shell/src/layout/: floating.rs  fullscreen.rs  mod.rs  stacking.rs  tiling.rs
crates/nekoland-shell/src/x11/: mod.rs  xwayland.rs
crates/nekoland-shell/src/xdg/: configure.rs  mod.rs  popup.rs  toplevel.rs
docs/: TODO-next.md  TODO.md  architecture.md  config-inventory.md  configuration.md  control_plane.md  plugin_guide.md
docs/milestones/: render-subapp-architecture.md  shell-app-architecture.md  wayland-app-architecture.md
docs/verification/: real-drm-import.md
nekoland/: Cargo.toml
nekoland-msg/: Cargo.toml
nekoland-msg/src/: main.rs
nekoland-msg/tests/: subscribe_cli.rs
nekoland/src/: lib.rs  main.rs
nekoland/tests/: config_runtime.rs  e2e_wayland_client.rs  external_texture_prepare.rs  inprocess_client_ecs.rs  inprocess_clipboard_selection.rs  inprocess_clipboard_transfer.rs  inprocess_command_events.rs  inprocess_dnd_transfer.rs  inprocess_frame_callbacks.rs  inprocess_keybindings.rs  inprocess_keyboard_repeat.rs  inprocess_layer_shell.rs  inprocess_overlapping_floating_click.rs  inprocess_presentation_feedback.rs  inprocess_primary_selection.rs  inprocess_primary_selection_transfer.rs  inprocess_seat_input.rs  inprocess_shm_surface_state.rs  inprocess_window_states.rs  ipc_clipboard_state.rs  ipc_config_subscription.rs  ipc_control_plane.rs  ipc_focus_subscription.rs  ipc_popup_subscription.rs  ipc_present_audit_state.rs  ipc_primary_selection_state.rs  ipc_window_subscription.rs  real_drm_dmabuf_import.rs  startup_protocol.rs  virtual_multi_output_soak.rs  virtual_output.rs  xwayland_smoke.rs
nekoland/tests/common/: mod.rs
packaging/sddm/: nekeland-session  nekeland.desktop
tests/integration/: focus_follows_mouse.rs  ipc_commands.rs  layout_tiling.rs  mod.rs  window_lifecycle.rs
tests/protocol_conformance/: wlcs.rs
tools/: dev-env.sh  generate-completions.sh  run-drm.sh  run-nested.sh  run_tiliing_nested.sh
(+63 files in other folders)
