[package]
name = "nekoland-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
calloop.workspace = true
drm-fourcc = "2"
libc = "0.2"
nekoland-core = { path = "../nekoland-core" }
nekoland-ecs = { path = "../nekoland-ecs" }
nekoland-protocol = { path = "../nekoland-protocol" }
serde.workspace = true
smithay.workspace = true
tracing.workspace = true
wayland-egl = "0.32"
xcursor = "0.3"

[lints]
workspace = true
