[package]
name = "nekoland-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
calloop.workspace = true
nekoland-core = { path = "../nekoland-core" }
nekoland-ecs = { path = "../nekoland-ecs" }
nix = { version = "0.31.2", default-features = false, features = ["inotify"] }
ron.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
