[package]
name = "nekoland-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
nekoland-config = { path = "../nekoland-config" }
nekoland-core = { path = "../nekoland-core" }
nekoland-ecs = { path = "../nekoland-ecs" }
nekoland-protocol = { path = "../nekoland-protocol" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
