[package]
name = "nekoland-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
calloop.workspace = true
nekoland-config = { path = "../nekoland-config" }
nekoland-core = { path = "../nekoland-core" }
nekoland-ecs = { path = "../nekoland-ecs" }
serde.workspace = true
slog.workspace = true
smithay.workspace = true
tracing.workspace = true

[dev-dependencies]
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.11", features = ["client"] }

[lints]
workspace = true
