[package]
name = "nekoland-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
cosmic-text.workspace = true
nekoland-config = { path = "../nekoland-config" }
nekoland-core = { path = "../nekoland-core" }
nekoland-ecs = { path = "../nekoland-ecs" }
tracing.workspace = true
xcursor = "0.3"

[lints]
workspace = true
